<resources>
    <string name="app_name">Fake DC Backlight</string>
    <string name="title_pref_settings">Settings</string>
    <string name="title_pref_instructions">Instructions</string>
    <string name="summary_pref_instructions">Enable Extra dim when the brightness is lower than the minimum screen brightness. Note: The minimum screen brightness is the brightness value in HAL, not necessarily 0~100% for every model, for example, the Xiaomi Mi 12s is 0~50%, you can adjust the brightness to the minimum brightness without strobe, then check \"Current HAL Brightness\". I actually measured that the minimum brightness of Xiaomi Mi 12s is 7.99%, please test other models by yourself</string>
    <string name="title_pref_about">About</string>
    <string name="title_pref_source_code">Source code</string>
    <string name="title_pref_feedback">Feedback</string>
    <string name="title_pref_enable">Enable Fake DC BackLight</string>
    <string name="title_pref_disable_on_screenoff">Disable on Screenoff</string>
    <string name="summary_pref_disable_on_screenoff">Solve the problem of AOD brightness and under-screen fingerprint, which may cause flickering when opening the screen</string>
    <string name="title_pref_min_screen_bright">Minimum screen brightness (%)</string>
    <string name="summary_pref_min_screen_bright">Enable Extra Dim when screen brightness is lower than this value (0~100)</string>
    <string name="title_pref_max_dim_strength">Reduce Bright Strength Scaling (%)</string>
    <string name="summary_pref_max_dim_strength">The larger the value, the darker the screen (0~100), greater than 95 may cause the screen to be hard to read</string>
    <string name="Tips">Tips</string>
    <string name="not_support">You seem to be using an outdated version of LSPosed or LSPosed is not active, please update LSPosed or activate it and try again.</string>
    <string name="xposeddescription">Enable Extra dim when the brightness is lower than the minimum screen brightness.</string>
    <string name="title_pref_hal_brightness">Current HAL Brightness</string>
    <string name="summary_pref_hal_brightness">Cannot obtain HAL Brightness, Activate the module and reboot and try again</string>
    <string name="title_pref_reduce_bright">Current Reduce Bright Strength</string>
    <string name="summary_pref_reduce_bright">Cannot obtain Reduce Bright Strength, Activate the module and reboot and try again</string>
</resources>
